Fixed contact not centered

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,13 +7,6 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-.vertical-center {
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
-  }
 
 .card_body_text{
 	font-size: 0.8em;
